# LumiNet

./: .gitignore  DESIGN.md  LICENSE  Makefile  PRODUCT.md  README.md
.github/workflows/: ci.yml
.impeccable/: design.json
.impeccable/live/: config.json
.kiro/steering/: agent-skills.md
client/: go.mod  go.sum
core/: Cargo.toml  cbindgen.toml
core/src/: lib.rs  types.rs
core/src/cidr/: blackrock.rs  expander.rs  mod.rs
core/src/dns/: doh.rs  dot.rs  mod.rs  packet.rs  udp.rs
core/src/ffi/: exports.rs  mod.rs
core/src/http/: mod.rs  prober.rs
core/src/icmp/: mod.rs  scanner.rs  unix.rs  windows.rs
core/src/sni/: detector.rs  mod.rs  spoofer.rs
core/src/socks/: client.rs  evasion.rs  mod.rs
core/src/speed/: mod.rs  tester.rs
core/src/tcp/: fragmentation.rs  mod.rs  prober.rs  raw_sockets.rs  stateless.rs
core/src/tls/: cert_installer.rs  mod.rs  prober.rs
core/src/wg/: mod.rs  prober.rs
core/tests/: blackrock_test.rs  dns_test.rs  icmp_test.rs  tcp_test.rs  wg_test.rs
docs/: WIKI.md
docs/api/: README.md
docs/architecture/: go-server.md  multi_platform_client.md  overview.md  rust-core.md
docs/guides/: cli-reference.md  development.md  native-ui.md  quickstart.md
docs/ports/: deploy_render.sh  serverless_worker.js
scripts/: analyze_to_port.py  build-all.ps1  build-all.sh  dev.ps1  dev.sh  mobile_bind.sh
server/: .air.toml  embed.go  go.mod  go.sum  luminet.exe.manifest  luminet_windows.rc  main.go  rsrc_windows_amd64.syso
server/cmd/: diagnose.go  gui.go  gui_actions_helpers.go  gui_actions_jobs.go  gui_actions_page.go  gui_actions_proxies.go  gui_actions_refresh.go  gui_actions_scans.go  gui_actions_settings.go  gui_bypass_tunnel.go  gui_bypass_wizard.go  gui_captive_portal.go  gui_censorship_auditor.go  gui_cockpit.go  gui_dashboard_page.go  gui_dns_diagnostics.go  gui_domain_fronting.go  gui_evasion_auditor.go  proxy.go  (+21 more)
(+370 files in other folders)
